[package]
name = "apca_balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
apca = "0.27.2"
serde = "1.0.188"
num-decimal = { version = "0.2.4", default-features = false, features = ["num-v04", "serde"] }
chrono = "0.4.30"
chrono-tz = "0.8.3"
anyhow = "1.0.75"
serde_json = "1.0.105"
